Make changes from PR review.
